stylesheets/stylesheet.css
/* ... */
[class^="icon--"], [class*=" icon--"] {
  /* use !important to prevent issues with browser extensions that change fonts */
  font-family: 'r316s_font' !important;
  speak: none;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  /* Better Font Rendering =========== */
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale; }

.icon--strategy:before {
  content: "\e03b"; }

.icon--design:before {
  content: "\e036"; }

.icon--development:before {
  content: "\e002"; }

.icon--google-plus:before {
  content: "\e902"; }

.icon--facebook:before {
  content: "\e903"; }

.icon--instagram:before {
  content: "\e904"; }

.icon--twitter:before {
  content: "\e905"; }

.icon--rss:before {
  content: "\e906"; }

.icon--youtube:before {
  content: "\e907"; }

.icon--dribbble:before {
  content: "\e908"; }

.icon--dropbox:before {
  content: "\e909"; }

.icon--github:before {
  content: "\e90a"; }

.ctn-center {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center; }

.banner {
  background-image: url('../images/_temp-banner.png');
  background-size: cover;
  box-sizing: border-box;
  height: 400px;
  padding: 1px 0;
  width: 100%;
}
  .banner__heading {
    color: #FFF;
    display: inline-block;
    font-size: 60px;
    line-height: 1;
    margin: 0 0 45px 0;
    position: relative;
    text-shadow: 1px 1px 2px #222;
  }
  .banner__heading--superscript {
    font-size: 1.2rem;
    bottom: -15px;
    right: -65px;
    position: absolute;
    vertical-align: super;
  }

  .site-footer__logo {
    border: 2px solid #FFF;
    color: #FFF;
    display: inline-block;
    font-size: 22px;
    font-size: 1.46667rem;
    font-weight: 600;
    line-height: 1;
    padding: 2px 8px;
    padding: 0.13333rem 0.53333rem;
    text-decoration: none; }
    .site-footer__logo:hover {
      border-color: #4bb1e2;
      color: #4bb1e2; }
  .site-footer__nav {
    margin-top: 3px;
    margin-top: 0.2rem;
    text-align: right; }
    .site-footer__nav__item {
      color: #FFF;
      font-size: 18px;
      font-size: 1.2rem;
      font-weight: bold;
      margin: 0px 5px;
      margin: 0rem 0.33333rem;
      padding: 5px;
      padding: 0.33333rem;
      text-decoration: none; }
      .site-footer__nav__item:hover {
        color: #f8b503; }


.main-content {
  background-color: #FFF;
  padding: 3rem 0 6rem 0;
}


  .site-footer {
    background-color: #0a4760;
    padding: 20px;
    padding: 1.33333rem;
    font-size: 80%; }
    .site-footer__logo {
      font-size: 16px;
      font-size: 1.06667rem; }
    .site-footer__copyright {
      color: #FFF;
      font-size: 12px;
      font-size: 0.8rem; }
    .site-footer__nav__item {
      font-size: 14px;
      font-size: 0.93333rem;
      font-weight: 400; }
    .site-footer--button {
      font-size: 13px;
      font-size: 0.86667rem;
      font-weight: 800;
      position: relative;
      top: -2px; }
      .site-footer--button:hover {
        background-color: #FFF;
        color: #0a4760; }

  .social {
    margin-top: 30px;
    margin-top: 2rem;
    text-align: right; }
    .social__icon {
      color: #4bb1e2;
      padding: 0px 5px;
      padding: 0rem 0.33333rem;
      text-decoration: none; }
      .social__icon:hover {
        color: #FFF !important; }
      .social__icon:visited {
        color: #4bb1e2; }
      .social__icon--last {
        margin-right: 15px;
        margin-right: 1rem; }


.repo-block {
  box-shadow: 1px 1px 4px rgba(0,0,0,0.45);
  box-sizing: border-box;
  padding: 2rem;
  width: 100%;
}
  .repo-block h2 {
    font-size: 30px;
    line-height: 1;
    margin: 0;
  }
  .repo-block hr {
    border: 1px solid #4bb1e2;
    margin: 15px 0;
    width: 70px;
  }
  .repo-block p {
    font-size: 13px;
    margin: 0;
  }

  .repo-block:hover {
    box-shadow: 1px 1px 4px rgba(0,0,0,0.65);
    cursor: pointer;
  }
    .repo-block:hover h2 {
      color: #0a4760;
    }
    .repo-block:hover hr {}
    .repo-block:hover p {}

